  * Bugfix: there was a problem with the ending of contexts with 
    the pthread backend. It caused some weird deadlock or behavior
    depending on the pthread implementation. [AL]
  
  MSG:
  * Add additionnal checkings on channel values in communication [AL]
  * New: MSG_task_get_source to see on which host a task was generated [HC]

  GRAS new functionnalities: [MQ]
  * enhance the parsing macro to allow the size of multidimentional objects
    to be given thru annotations.

  GRAS performance improvements: [MQ]
  [DataDesc]
  * Reduce the amount of cbps creation/destruction by making it static to 
    datadesc_send/recv() and using a (newly created) cbps_reset (based on 
    dynar_reset ())
  [Virtu]
  * Change libdata to a set so that we can search for stuff by ID (and thus 
    reduce the insane amount of dict lookups)     
  
  [Transport]
  * Actually implement gras_datadesc_copy() so that we don't have to mimick
    RL communication on top of SG since it's so uneffective. 
    It may also be used for inter-thread communication in RL, one day. 
  * Use gras_datadesc_copy() to exchange messages on top of SG 
    Allows to:
    - improve message exchange performance on top of SG
    - deprecate transport_plugin_sg.c:gras_trp_sg_chunk_send() & recv()
  * Don't exchange on the network the size of the used part of buffer,
    instead, specify the possible buffer size to read(). 
    Advantages:
     - reduces the amount of read/write calls (one pair per exchange)
     - reduces the amount of exchanged data (the size)
     - allows to retrieve all arrived data on receiver side, if we don't need
       it right now (subsequent read will peek the buffer)
     - allows the receiver to proceed with the begining of the stream before
       everything is arrived
     - make it possible to build an iov transport (using readv/writev)
    Extra difficulty: 
     - take care of the data with non-stable storage (like stacked data),
       and bufferize them.