@@ -1,3 +1,3 @@
-SUBDIRS= ping timer chrono tokenS
+SUBDIRS= ping timer chrono tokenS mmrpc
 
 include $(top_srcdir)/acmacro/dist-files.mk
