@@ -1,0 +1,11 @@
+#! @BASH@ -e
+if [ x@EXEEXT@ = x ] ; then 
+#  exenv="libtool --mode=execute valgrind --show-reachable=yes --run-libc-freeres=no "
+  exenv=$SG_TEST_EXENV
+else
+  exenv=wine
+fi
+    
+$exenv ./mmrpc_server@EXEEXT@ 4002 $@ &
+sleep 1
+$exenv ./mmrpc_client@EXEEXT@ 127.0.0.1 4002 $@
